--- a/src/css/shoplist.css
+++ b/src/css/shoplist.css
@@ -1,4 +1,5 @@
 body{background-color: #f3f4f6;}
+html{font-size: 32px;}
 .top-temp{height:5.625rem; }
 .bottom-temp{height: 6.125rem;width: 40.0rem;float: left;margin-top: 1.25rem;}
 .main{box-sizing: border-box;width: 40.0rem;}
