--- a/goshow/css/index.css
+++ b/goshow/css/index.css
@@ -15,7 +15,7 @@ h1{font-size: 1rem;text-align: center;font-family: fantasy;color: lightpink;lett
 .search{width: 100%;background-color: #51535a;height: 0.86rem;border-top:1px solid #707070;border-bottom:1px solid #333;overflow: hidden;}
 .search-bar{width: 5.9rem;height: 0.56rem;background-color: #fff;margin: 0.16rem auto;border-radius: 0.28rem;}
 .search-bar img{display: block;width: 0.34rem;height: 0.38rem;float: left;margin-left: 0.27rem;margin-top: 0.12rem;}
-.search-bar input{width: 3.9rem;height: 0.4rem;display: block;float: left;margin-top: 0.1rem;margin-left: 0.12rem;outline: none;border:0;font-size: 0.22rem;}
+.search-bar input{width: 3.9rem;height: 0.4rem;display: block;float: left;margin-top: 0.12rem;margin-left: 0.12rem;outline: none;border:0;font-size: 0.22rem;}
 .banner{width: 100%;height: 2.5rem;border-top:1px solid #ababab;border-bottom:1px solid #707070;overflow: hidden;}
 .banner img{height: 2.5rem;width: 100%;}
 .item-group{width: 100%;overflow: hidden;}
@@ -36,4 +36,4 @@ h1{font-size: 1rem;text-align: center;font-family: fantasy;color: lightpink;lett
 footer{position: relative;height: 0.96rem;width: 100%;position: fixed;left: 0;bottom: 0;background-color: #474950;border-top:1px solid #ababab;}
 .menu{width: 1.28rem;height: 9.6rem;float: left;text-align: center;display: block;padding-top:0.1rem;}
 .menu p{color: #fff;font-size: 0.24rem;}
-.active-menu{width:1.28rem;height: 0.05rem;background-color:#e4376a;position: absolute;display: block;top: 0;left: 0;transition: all 0.4s cubic-bezier(.88,1.81,.73,.75);}
+.active-menu{width:1.28rem;height: 0.05rem;background-color:#e4376a;position: absolute;display: block;top: 0;transition: all 0.4s cubic-bezier(.88,1.81,.73,.75);}
